language/move-lang/tests/move_check/expansion/invalid_pack_mname_non_addr.exp
error: 

   ┌── tests/move_check/expansion/invalid_pack_mname_non_addr.move:4:9 ───
   │
 4 │         false.M.S { }
   │         ^^^^^ Invalid fully qualified module type name. Expected: an address
   │

error: 

   ┌── tests/move_check/expansion/invalid_pack_mname_non_addr.move:8:9 ───
   │
 8 │         bar().bar().M.S { }
   │         ^^^^^^^^^^^ Invalid fully qualified module type name. Expected: an address
   │

